Fix credit spacing

--- a/styles.css
+++ b/styles.css
@@ -109,8 +109,8 @@ section {
 .spacer-text {
     position: absolute;
     margin-top: 45px;
-    margin-left: 31%;
-    margin-right: 31%;
+    width: 100%;
+    text-align: center;
     color: rgb(218, 218, 218);
     font-size: 11px;
     font-weight: bold;
@@ -428,7 +428,5 @@ a:visited {
 
     .spacer-text {
         margin-top: 35px;
-        margin-left: 50%;
-        margin-right: 50%;
     }
 }
